--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -13,33 +13,40 @@ pre {
 }
 
 #buttons {
-    height: 7%;
-    width: 100%;
+    position: relative;
+    height: 15%;
     margin: 0 5%;
-    padding-bottom: 1%
+    padding-bottom: 1%;
+    align-items: center;
 }
 
-#container1,
-#container2,
-#container3 {
-    height: 25%;
+#container1 {
+    height: 70%;
     margin: 1% auto;
     background-color: black;
     border: 1px solid rgb(96, 96, 96);
     border-radius: 5px;
-    overflow-y: scroll
+    overflow-y: hidden
 }
+
+#testContainer {
+    position: relative;
+    height: 5%;
+    width: 100%;
+    margin: 1% auto
+}
+
 
 .indentText {
     margin-left: 8px;
 }
 
 .macktez-button {
-    height: 90%;
-    width: 30%;
-    margin: auto;
-    background-color: rgb(0, 128, 128);
-    color: #ddd;
+    height: 60%;
+    width: 20%;
+    margin: 2% 2%;
+    background-color: rgb(64, 64, 64)
+    color: black;
     font-size: 1em;
     border-radius: 8px
 }
