--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: rgb(32, 32, 32);
@@ -6,7 +7,7 @@ body {
 
 .pane-mini {
     position: relative;
-    width: 15%;
+    width: 20%;
     background-color: rgb(32, 32, 32);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', monospace;
     color: rgb(128, 128, 128)
@@ -22,6 +23,7 @@ body {
 
 .btn.disabled, .btn:disabled {
     opacity: 0.2;
+    border-color: #ccc
 }
 
 .btn-dark {
@@ -80,35 +82,35 @@ pre {
 }
 
 .indentText {
-    margin-left: 8px;
+    margin: 3px 8px;
     font-size: .9em;
-    color: cyan
+    color: #ccc;
+    border-bottom: 1px solid#ccc
 }
 
 
 /* width */
-
 ::-webkit-scrollbar {
     width: 1%;
 }
 
-/* Track */
 
+/* Track */
 ::-webkit-scrollbar-track {
     background: black;
     border: 1px solid gray
 }
 
-/* Handle */
 
+/* Handle */
 ::-webkit-scrollbar-thumb {
     background: #ccc;
     border-color: cyan;
     border-radius: 10%
 }
 
-/* Handle on hover */
 
+/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
